fix dark mode issues

--- a/packages/nextjs/app/layout.css
+++ b/packages/nextjs/app/layout.css
@@ -11,10 +11,13 @@
 .main-container::after {
   background: linear-gradient(180deg, rgba(251, 252, 254, 0) 0%, #fbfcfe 100%);
 }
-.main-container.dark::after {
-  background: linear-gradient(180deg, rgba(251, 252, 254, 0) 0%, #1a1e23 100%);
+.main-container.dark::before  {
+  background: linear-gradient(180deg, rgba(251, 252, 254, 0) 0%, #000 100%);
 }
 
+.main-container.dark::after  {
+  background: linear-gradient(180deg, rgba(251, 252, 254, 0) 0%, rgba(251, 252, 254, 0) 40%, #1a1e23 100%);
+}
 .main-content {
   border-radius: 20px;
   width: 95%;
