--- a/packages/nextjs/styles/leaderboard.css
+++ b/packages/nextjs/styles/leaderboard.css
@@ -1,10 +1,8 @@
 th {
-  background-color: #f2f3f8;
   padding: 14px 24px;
   text-align: left;
   font-size: 14px;
   font-weight: 400;
-  color: #404454;
 }
 
 th:hover {
